--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "exp",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,20 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "crypto-es": "^2.1.0",
-    "next": "14.0.2",
+    "axios": "^1",
+    "crypto-es": "^2",
+    "fetch-jsonp": "^1",
+    "next": "^15",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-toastify": "^10",
+    "styled-components": "^6"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/node": "22.8.4",
+    "@types/react": "18.3.12",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.2",
+    "autoprefixer": "^10",
+    "eslint": "^9",
+    "eslint-config-next": "^15",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "tailwindcss": "^3",
+    "typescript": "5.6.3"
   }
 }
